# ora-automation

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  ERD.md  IMPLEMENTATION_ROADMAP.md  LICENSE  LOCAL_FIRST_WORKSPACE_MODEL.md  Makefile  README.md  REFACTOR_SEQUENCE.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
automations/e2e/: README.md
automations/e2e/services/: README.md
automations/qa/: README.md
automations/research/: README.md
docs/: AGENT_DEBATE_FRAMEWORK.md  AGENT_ORG_CUSTOMIZATION_PLAN.md  API_REFERENCE.md  ARCHITECTURE.md  CONTROL_CENTER_SPEC.md  ENHANCEMENT_PLAN.md  GITHUB_APP_INTEGRATION_PLAN.md  GITHUB_WORKFLOW.md  IDEA_TO_PROJECT_PLAN.md  PROMPT_ENGINEERING_VS_SFT.md  SAAS_PLAN.md  TOSS_REORG_PLAN.md  docker-operations-guide.md
docs/agents/: ceo.md  compliance-officer.md  data-analyst.md  data-scientist.md  developer-backend.md  developer-devops.md  developer-frontend.md  devops-sre.md  finance-analyst.md  growth-hacker.md  linguist.md  market-analyst.md  ops.md  planner.md  pm.md  product-designer.md  qa-lead.md  qa.md  researcher.md  search-evaluator.md  security-specialist.md  tech-lead.md
docs/internal/: GENERALIZATION_ARCHITECTURE_PLAN.md  PROJECT_GRAPH_SCHEMA.md  README.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: AgentEditor.tsx  ChapterEditor.tsx  ChatContextBar.tsx  ChatList.tsx  ChatWindow.tsx  ControlCenter.tsx  EmptyState.tsx  GitHubSettings.tsx  GuestAgentPicker.tsx  LoginScreen.tsx  MessageBubble.tsx  (+20 more)
infra/terraform/: README.md  main.tf  terraform.tfvars.example
scripts/: llm_round_openai.py  run_collaboration_cycle.sh  run_cypress_open.sh  run_e2e_cypress.sh  run_e2e_playwright.sh  run_e2e_service.sh  run_qa_program.sh  verify_sources.py
src/ora_automation_api/: __init__.py  auth_router.py  chat_router.py  clone_service.py  config.py  config_reader.py  database.py  dialog_engine.py  env_reader.py  exceptions.py  github_client.py  github_router.py  llm_planner.py  local_scanner.py  logging_config.py  main.py  models.py  notion_client.py  notion_publisher.py  notion_router.py  org_router.py  org_templates.py  plan_utils.py  project_service.py  projects_router.py  queue.py  scan_paths_router.py  scheduler.py  scheduler_router.py  scheduling_handler.py  schemas.py  service.py  worker.py
src/ora_rd_orchestrator/: __init__.py  agent_evolution.py  chatbot.py  cli.py  config.py  consensus.py  convergence.py  deliberation.py  engine.py  extended_research.py  gemini_provider.py  llm_client.py  llm_provider.py  persona_learning.py  personas.py  pipeline.py  report_builder.py  research.py  scoring.py  structured_debate.py  topic_discovery.py  trust_learning.py  types.py  utils.py  web_sources.py  workspace.py
src/ora_rd_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent_evolution.py  test_api_chat.py  test_chat_router_endpoints.py  test_clone_service.py  test_config_reader.py  test_config_validation.py  test_convergence.py  test_dialog_errors.py  test_env_reader.py  test_extended_research.py  test_github.py  test_github_router.py  test_guest_collaboration.py  test_inprocess_run.py  test_input_validation.py  test_local_scanner.py  test_notion.py  test_org_recommend.py  test_org_router.py  test_organizations.py  test_path_traversal.py  test_persona_learning.py  test_persona_merge.py  test_persona_persistence.py  test_pipeline_cancel.py  test_project_config_endpoint.py  test_project_env_endpoint.py  test_project_history_endpoint.py  test_project_service.py  test_projects_router.py  test_queue_retry_logging.py  test_scan_path_model.py  test_scan_paths_router.py  test_scheduler.py  test_scheduling_intent.py  test_service_helpers.py  test_structured_debate.py  test_trust_learning.py  test_upce_e2e.py
(+55 files in other folders)
